--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-force-graph": "^1.47.7",
+    "react-force-graph-2d": "^1.27.1",
+    "react-force-graph-labeled-links": "^1.0.5",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
