--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.47.7",
     "react-force-graph-2d": "^1.27.1",
+    "react-force-graph-3d": "^1.27.0",
     "react-force-graph-labeled-links": "^1.0.5",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
